@@ -24,6 +24,7 @@
     Mojolicious::Controller.
   - Removed deprecated keep_alive_requests setting from Hypnotoad.
   - Renamed pattern attribute in Mojolicious::Routes::Route to unparsed.
+  - Renamed types attribute in Mojolicious::Types to mapping.
   - Renamed template attribute in Mojo::Template to unparsed.
   - Renamed all_contents, contents, following_siblings, next_sibling,
     preceding_siblings and previous_sibling methods in Mojo::DOM to
